<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Course Networking</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_add">Add</string>

    <!-- system_label -->
    <string name="exit_label">Press again to exit......</string>
    <string name="submit_label">Submit</string>
    <string name="submit_label_caps">SUBMIT</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="processing_label">Loading posts.</string>
    <string name="process_label">Loading...</string>
    <string name="searching">Searching...</string>
    <string name="image_description">This is the description for the image</string>
    <string name="request_time_out">Request time out!</string>
    <string name="example_text_short">Display Text Display Text</string>
    <string name="example_text">Display Text Display Text Display Text Display Text Display Text Display Text Display Text</string>

    <!-- home page label -->
    <string name="current_filter">Current Filter: All</string>
    <string name="filter_by">Filter By</string>
    <string name="notification_request">Notifications</string>
    <string name="colleague_request">Colleague Requests</string>
    <string name="email_request">Emails</string>
    <string name="filter_select_label">Select a Filter</string>
    <string name="filter_done_label">Done</string>
    <string name="reject_label">Reject</string>
    <string name="accept_label">Accept</string>
    <string name="notifications">Notifications</string>
    <string name="emails">Emails</string>
    <string name="colleague_requests">Colleague Requests</string>
    <string name="compose_email">Compose Email</string>

    <!-- login label -->
    <string name="user_hint">Email or CN Number</string>
    <string name="password_hint">Password</string>
    <string name="register_label">New user? Go to www.thecn.com to register!</string>
    <string name="user_input">Please enter a valid email address or CN Number and password</string>

    <!-- post label -->
    <string name="post_button">Post</string>
    <string name="delete_tip">Do you really want to delete this post?</string>
    <string name="post_hint">Write Post</string>
    <string name="create_post">Create a Post</string>
    <string name="post_title">Post visible to</string>
    <string name="post_visibility">Visibility Settings</string>
    <string name="post_visibility_update">Update</string>
    <string name="email_to">Email To</string>
    <string name="choose_from_sd">Select a Photo from your Gallery</string>
    <string name="take_photos">Take a Photo</string>
    <string name="gallery_button">Gallery</string>
    <string name="gallery_button_description">Get Photo from Gallery</string>
    <string name="thumbnail">Photo Thumbnail</string>
    <string name="remove_photo">Remove Photo From Post</string>
    <string name="back_button">Go back</string>
    <string name="remove_photos_button">Remove All Photos</string>
    <string name="remove_videos_button">Remove All Video Links</string>
    <string name="video_link_hint">Paste a Youtube video link</string>
    <string name="remove_video_link_desc">Remove Youtube link</string>
    <string name="click_here"><u>Click here</u></string>

    <!-- menu label -->
    <string name="home_label">Home    (Refresh)</string>
    <string name="my_profile">My Profile</string>
    <string name="logout_label">Logout</string>

    <!-- email label -->
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="cc_label">Cc</string>
    <string name="subject_label">Subject:</string>
    <string name="title_activity_email">Email</string>

    <!-- colleague request -->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="ignore">Ignore</string>
    <string name="accepted_message">You are now colleagues!</string>
    <string name="rejected_message">Request rejected!</string>
    <string name="colleagues">Colleagues</string>
    <string name="pending_colleague">Pending Colleague</string>
    <string name="colleague">Colleague</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>

    <!-- image browse label -->
    <string name="image_browse_title">View Image</string>
    <string name="image_browse_all_title">Browse All Images</string>
    <string name="image_thumbnail_description">Image Thumbnail</string>
    <string name="image_thumbnail_remove">Remove Image</string>
    <string name="add_photos">Submit Photos</string>
    <string name="deselect_all_photos">Deselect All</string>

    <!-- reflection label -->
    <string name="reflection_label">Reflections</string>
    <string name="reflection_send_label">Submit</string>
    <string name="reflection_hint_label">Add a reflection...</string>
    <string name="roster_label">Roster</string>

    <!-- profile label -->
    <string name="about_me_field_label">About Me</string>
    <string name="gender_field_label">Gender</string>
    <string name="currently_field_label">Currently</string>
    <string name="current_work_field_label">Current Work</string>
    <string name="primary_language_field_label">Primary Language</string>
    <string name="country_field_label">Country</string>
    <string name="time_zone_field_label">Time Zone</string>

    <!-- conexus label -->
    <string name="conexus_number_field_label">Conexus Number</string>

    <!-- course label -->
    <string name="about_label">About</string>
    <string name="tasks_label">Tasks</string>
    <string name="posts_label">Posts</string>
    <string name="done">Done</string>
    <!-- course about label -->
    <string name="name_field_label">Name</string>
    <string name="course_number_field_label">Course Number</string>
    <string name="status_field_label">Status</string>
    <string name="school_field_label">School</string>
    <string name="instructor_field_label">Instructor</string>
    <string name="about_field_label">About</string>

    <!-- Anar Bar -->
    <string name="anar_description">Anar Bar</string>
    <string name="zero">0</string>
    <string name="average">avg</string>

    <!-- login label -->
    <string name="title_activity_login">Course Networking</string>
    <string name="login_title_text">Course\nNetworking</string>
    <string name="username_label">Email or CN #</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_text"><u>Create an Account</u></string>
    <string name="website_address">www.thecn.com</string>
    <string name="logo_content_description">Course Networking Logo</string>
    <string name="title_activity_post_visibility">PostVisibilityActivity</string>
    <string name="hello_world">Hello world!</string>

    <integer name="fragment_anim_duration">400</integer>
    <integer name="close_drawer_duration">350</integer>

    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_last_screen">LastScreen</string>
    <string name="title_activity_post_likes">PostLikesActivity</string>
    <string name="title_activity_content_page">ContentPageActivity</string>
    <string name="flag_description">Finish flag</string>
    <string name="title_activity_compose_email">ComposeEmailActivity</string>
    <string name="email_subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>

    <!-- Email label -->
    <string name="email_reply">Write a reply</string>
    <string name="email_submit">Submit</string>
    <string name="title_activity_poll">PollActivity</string>

    <!-- Poll label -->
    <string name="questions_label">Questions</string>
    <string name="view_responses">View Responses</string>

</resources>
